force-app/main/default/objects/SolicitudProducto__c/SolicitudProducto__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena las solicitudes de nuevos productos no comercializados por Arriaga</description>
    <label>Solicitud de producto</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Número de solicitud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>