force-app/main/default/objects/SolicitudProducto__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidato que realiza la petición del producto</description>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Solicitudes de productos</relationshipLabel>
    <relationshipName>Solicitudes_de_productos</relationshipName>
    <type>Lookup</type>
</CustomField>