force-app/main/default/objects/SolicitudProducto__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente que realiza la petición del producto</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de productos</relationshipLabel>
    <relationshipName>SolicitudesProductos</relationshipName>
    <type>Lookup</type>
</CustomField>