force-app/main/default/objects/SolicitudProducto__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Comentarios sobre la solicitud de nuevo producto</description>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>