force-app/main/default/objects/SolicitudProducto__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado de la solicitud</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En estudio</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>En pruebas</fullName>
            </value>
            <value>
                <fullName>Comercializado</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>