force-app/main/default/objects/SolicitudProducto__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto comercializado a partir de la solicitud</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Solicitudes de productos</relationshipLabel>
    <relationshipName>Solicitudes_de_productos</relationshipName>
    <type>Lookup</type>
</CustomField>