force-app/main/default/objects/SolicitudProducto__c/fields/TipoProducto__c.field-meta.xml
<CustomField>
    <fullName>TipoProducto__c</fullName>
    <description>Tipo de producto solicitado</description>
    <label>Tipo de producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Asesoramiento</fullName>
            </value>
            <value>
                <fullName>Bancario</fullName>
            </value>
            <value>
                <fullName>Cláusulas abusivas</fullName>
            </value>
            <value>
                <fullName>Daños</fullName>
            </value>
            <value>
                <fullName>Familia</fullName>
            </value>
            <value>
                <fullName>Nuevos productos</fullName>
            </value>
            <value>
                <fullName>Reclamación cantidad</fullName>
            </value>
            <value>
                <fullName>Sucesiones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>