force-app/main/default/objects/SolicitudProducto__c/listViews/Todas_las_solicitudes.listView-meta.xml
<ListView>
    <fullName>Todas_las_solicitudes</fullName>
    <columns>NAME</columns>
    <columns>Candidato__c</columns>
    <columns>Cliente__c</columns>
    <columns>Comentarios__c</columns>
    <columns>Estado__c</columns>
    <columns>TipoProducto__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las solicitudes</label>
</ListView>